Use -webkit-appearance to get rid of janky button on iOS and etc. (fixes #10)

--- a/_sass/util.scss
+++ b/_sass/util.scss
@@ -135,6 +135,7 @@ a.button, input.button {
     transition: $transition;
     border: none !important;
     cursor: pointer;
+    -webkit-appearance: button;
     &.right { float: right; right: 0 }
     &:hover {
         background: $grey1 !important;
